feat: add like ui and prepare likers overview modal
